--- a/requirements.txt
+++ b/requirements.txt
@@ -1,142 +1,194 @@
-# 암호화폐 거래소 API
-ccxt>=4.1.13
-
-# 데이터 분석 및 수치 계산
-pandas>=2.1.4
-numpy>=1.26.2
-
-# 시각화
-matplotlib>=3.8.2
-seaborn>=0.13.0
-
-# 설정 파일 처리
-pyyaml>=6.0.1
-
-# 텔레그램 알림
-python-telegram-bot>=20.7
-
-# 테스트
-pytest>=7.4.3
-pytest-cov>=4.1.0
-pytest-mock>=3.12.0
-
-# 노트북
-jupyter>=1.0.0
-notebook>=7.0.6
-ipykernel>=6.27.0
-
-# 데이터 처리 및 분석
-scikit-learn>=1.3.2
-ta>=0.11.0  # 기술적 분석 지표
-statsmodels>=0.14.0  # 통계 분석
-
-# 유틸리티
-python-dotenv>=1.0.0  # 환경 변수 관리
-requests>=2.31.0  # HTTP 요청
-websockets>=12.0  # 실시간 데이터 수신
-aiohttp>=3.9.1  # 비동기 HTTP 클라이언트
-schedule>=1.2.1  # 작업 스케줄링
-
-# 로깅 및 모니터링
-structlog>=24.1.0  # 구조화된 로깅
-prometheus-client>=0.19.0  # 메트릭 수집
-
-# 개발 도구
-black>=23.11.0  # 코드 포맷팅
-flake8>=6.1.0  # 코드 린팅
-mypy>=1.7.1  # 타입 체크
-isort>=5.12.0  # import 정렬
-
-# 기본 패키지
-numpy>=1.26.2
-pandas>=2.2.1
-python-dotenv>=1.0.1
-
-# 데이터 분석 및 머신러닝
-scikit-learn>=1.3.2
-statsmodels>=0.14.0
-scipy>=1.10.0
-textblob>=0.17.1
-
-# 기술적 분석
-ta-lib>=0.6.3
-ta>=0.11.0
-
-# 차트 및 시각화
-matplotlib>=3.8.2
-seaborn>=0.13.0
-plotly>=5.18.0
-mplfinance>=0.12.9b7  # 최신 베타 버전 사용
-
-# 웹 대시보드
-dash>=2.9.0
-dash-bootstrap-components>=1.4.0
-flask>=2.2.0
-streamlit>=1.32.0
-
-# 데이터베이스
-peewee>=3.16.0
-sqlalchemy>=2.0.0
-
-# API 및 네트워킹
-aiohttp>=3.9.3
-requests>=2.31.0
-websockets>=12.0
-ccxt>=4.2.15
-aiodns>=3.1.1
-
-# 암호화 및 보안
-cryptography>=41.0.0
-
-# 알림 및 메시징
-python-telegram-bot[job-queue]>=20.7
-
-# 유틸리티
-PyYAML>=6.0.1
-schedule>=1.2.1
-pytz>=2023.3
-tqdm>=4.65.0
-
-# 로깅 및 모니터링
-structlog>=24.1.0
-prometheus-client>=0.19.0
-
-# 테스트
-pytest>=7.4.3
-pytest-asyncio>=0.21.0
-pytest-cov>=4.1.0
-pytest-mock>=3.12.0
-
-# 개발 도구
-black>=23.11.0
-flake8>=6.1.0
-mypy>=1.7.1
-isort>=5.12.0
-
-# 노트북
-jupyter>=1.0.0
-notebook>=7.0.6
-ipykernel>=6.27.0
-
-# 추가된 패키지
-streamlit>=1.22.0
-plotly>=5.13.0
-pandas>=1.5.0
-numpy>=1.23.0
-ccxt>=3.0.0
-python-dotenv>=1.0.0
-pyyaml>=6.0.0
-aiohttp>=3.8.0
-websockets>=10.0
-python-telegram-bot>=13.0
-SQLAlchemy>=1.4.0
-pytest>=7.0.0
-black>=22.0.0
-flake8>=4.0.0
-mypy>=0.9.0
-boto3>=1.26.0
-google-auth>=2.16.0
-google-auth-oauthlib>=1.0.0
-google-auth-httplib2>=0.1.0
-google-api-python-client>=2.86.0 "streamlit>=1.22.0" 
-"plotly>=5.10.0" 
+aiodns==3.2.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.10.11
+aiosignal==1.3.2
+altair==5.5.0
+anyio==4.9.0
+APScheduler==3.11.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
+async-timeout==5.0.1
+attrs==25.3.0
+babel==2.17.0
+beautifulsoup4==4.13.3
+black==25.1.0
+bleach==6.2.0
+blinker==1.9.0
+cachetools==5.5.2
+ccxt==4.4.72
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.0
+coverage==7.8.0
+cryptography==44.0.2
+cycler==0.12.1
+dash==3.0.2
+dash-bootstrap-components==2.0.0
+dateparser==1.2.1
+debugpy==1.8.13
+decorator==5.2.1
+defusedxml==0.7.1
+exceptiongroup==1.2.2
+executing==2.2.0
+fastjsonschema==2.21.1
+flake8==7.2.0
+Flask==3.0.3
+fonttools==4.56.0
+fqdn==1.5.1
+frozendict==2.4.6
+frozenlist==1.5.0
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==8.18.1
+ipywidgets==8.1.5
+isoduration==20.11.0
+isort==6.0.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.4.2
+json5==0.11.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.7
+MarkupSafe==3.0.2
+matplotlib==3.9.4
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mistune==3.1.3
+mplfinance==0.12.10b0
+multidict==6.2.0
+multitasking==0.0.11
+mypy==1.15.0
+mypy-extensions==1.0.0
+narwhals==1.33.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+nltk==3.9.1
+notebook==7.3.3
+notebook_shim==0.2.4
+numpy==2.0.2
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+patsy==1.0.1
+peewee==3.17.9
+pillow==11.2.0
+platformdirs==4.3.7
+plotly==6.0.1
+pluggy==1.5.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+propcache==0.3.1
+protobuf==5.29.4
+psutil==7.0.0
+pure_eval==0.2.3
+pyarrow==19.0.1
+pycares==4.5.0
+pycodestyle==2.13.0
+pycparser==2.22
+pycryptodome==3.22.0
+pydeck==0.9.1
+pyflakes==3.3.2
+Pygments==2.19.1
+PyJWT==2.10.1
+pyparsing==3.2.3
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-cov==6.1.0
+pytest-mock==3.14.0
+python-binance==1.0.28
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-json-logger==3.3.0
+python-telegram-bot==22.0
+pytz==2025.2
+pywin32==310
+pywinpty==2.0.15
+PyYAML==6.0.2
+pyzmq==26.3.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.24.0
+schedule==1.2.2
+scikit-learn==1.6.1
+scipy==1.13.1
+seaborn==0.13.2
+Send2Trash==1.8.3
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.40
+stack-data==0.6.3
+statsmodels==0.14.4
+streamlit==1.44.1
+structlog==25.2.0
+ta==0.11.0
+ta-lib @ file:///C:/coin_Trading/ta_lib-0.6.3-cp39-cp39-win_amd64.whl#sha256=efa544865aa7e8222d43de56c9e4ebea6e8265923ec8f49bc9331cffc281e9e1
+tenacity==9.1.2
+terminado==0.18.1
+textblob==0.19.0
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+toml==0.10.2
+tomli==2.2.1
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20241206
+typing_extensions==4.13.0
+tzdata==2025.2
+tzlocal==5.3.1
+uri-template==1.3.0
+urllib3==2.3.0
+watchdog==6.0.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.0.6
+widgetsnbextension==4.0.13
+yarl==1.18.3
+yfinance==0.2.55
+zipp==3.21.0
+"PyJWT" 
