--- a/requirements.txt
+++ b/requirements.txt
@@ -125,7 +125,7 @@ pycryptodome==3.22.0
 pydeck==0.9.1
 pyflakes==3.3.2
 Pygments==2.19.1
-PyJWT==2.10.1
+PyJWT
 pyparsing==3.2.3
 pytest==8.3.5
 pytest-asyncio==0.26.0
@@ -160,7 +160,7 @@ soupsieve==2.6
 SQLAlchemy==2.0.40
 stack-data==0.6.3
 statsmodels==0.14.4
-streamlit==1.44.1
+streamlit>=1.22.0
 structlog==25.2.0
 ta==0.11.0
 ta-lib @ file:///C:/coin_Trading/ta_lib-0.6.3-cp39-cp39-win_amd64.whl#sha256=efa544865aa7e8222d43de56c9e4ebea6e8265923ec8f49bc9331cffc281e9e1
@@ -191,4 +191,4 @@ widgetsnbextension==4.0.13
 yarl==1.18.3
 yfinance==0.2.55
 zipp==3.21.0
-"PyJWT" 
+google-api-python-client>=2.86.0 
