--- a/requirements.txt
+++ b/requirements.txt
@@ -191,4 +191,8 @@ widgetsnbextension==4.0.13
 yarl==1.18.3
 yfinance==0.2.55
 zipp==3.21.0
-google-api-python-client>=2.86.0 
+google-api-python-client>=2.86.0
+
+# TA-Lib 대체 패키지
+ta>=0.10.0
+pandas-ta>=0.3.0 
