--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,4 +7,12 @@ font = "sans serif"
 
 [server]
 enableCORS = false
-enableXsrfProtection = false 
+enableXsrfProtection = false
+fileWatcherType = "none"
+
+[theme]
+primaryColor = "#FF4B4B"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+font = "sans serif" 
