--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,33 @@
 version: '3.8'
 
 services:
-  app:
+  trading_bot:
     build: .
+    volumes:
+      - ./data:/app/data
+      - ./results:/app/results
+      - ./logs:/app/logs
+    env_file:
+      - .env
+    restart: unless-stopped
+    networks:
+      - trading_network
+
+  web_interface:
+    build: .
+    command: streamlit run run_web.py
     ports:
       - "8501:8501"
     volumes:
-      - .:/app
+      - ./data:/app/data
+      - ./results:/app/results
+      - ./logs:/app/logs
     env_file:
-      - .env.development
-    environment:
-      - PYTHONPATH=/app
+      - .env
     restart: unless-stopped
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3" 
+    networks:
+      - trading_network
+
+networks:
+  trading_network:
+    driver: bridge 
